# crawlerstack-spiderkeeper

./: .gitignore  .gitlab-ci.yml  .markdownlint.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  Pipfile  README.md  docker-compose-executor.yml  docker-compose-forwarder.yml  docker-compose-scheduler.yml  docker-compose-server.yml  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: gh-page.yml  main.yml
docker-compose/: README.md  docker-compose-scheduler.yml  docker-compose-server.yml
docker-compose/mian_server/: docker-compose.yml  settings_executor.yml  settings_forwarder.yml  settings_scheduler.yml  settings_server.yml
docker-compose/other_server/: docker-compose.yml
docs/: Spiderkeeper平台接口设计.docx  best_practices.md  deploy.md  future_plan.md  overview.md  project.drawio  spiderkeeper.drawio  数据库表结构设计.docx  系统关系图.drawio
docs/core/: architecture.md  core_services.md  executor.md  forwarder.md  scheduler.md  sdk.md
docs/installation/: compose.md  k8s.md
docs/quick_start/: user_guide.md
docs/task_development/: integration_of_sdk.md  regular_task.md
frontend/: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.js  Caddyfile  Dockerfile  README.md  package.json
frontend/docs/: develop.md
frontend/mocks/: collections.json
frontend/mocks/routes/: artifacts.js  common.js  executors.js  jobs.js  logs.js  projects.js  storage.js  tasks.js
frontend/public/: index.html
frontend/src/: App.tsx  constant.tsx  index.css
frontend/src/components/: utils.tsx
frontend/src/dashboard/: Dashboard.tsx  Welcome.tsx
frontend/src/jsonDataProvider/: ParamsRule.ts  SortRule.ts  index.ts  types.ts
frontend/src/layout/: AppBar.tsx  Layout.tsx  NowTasks.tsx  authCallbackPage.tsx  login.tsx  logout.tsx  themes.ts
frontend/src/pages/: ActionsToolbar.tsx  Filters.tsx  index.tsx
frontend/tests/: JobParameValidate.test.ts  ParamsRule.test.ts  SortRule.test.ts
helm_chart/: README.md
helm_chart/spiderkeeper/: Chart.yaml  README.md  values.yaml
helm_chart/spiderkeeper/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  executor_deployment.yaml  executor_service.yaml  forwarder_deployment.yaml  forwarder_ingress.yaml  forwarder_service.yaml  pvc.yaml  releBinding.yaml  role.yaml  scheduler_deployment.yaml  scheduler_service.yaml  server_deployment.yaml  server_service.yaml  serviceaccount.yaml  web_deployment.yaml  web_ingress.yaml  web_service.yaml
src/crawlerstack_spiderkeeper/: __init__.py  cmdline.py  manage.py  signals.py
src/crawlerstack_spiderkeeper/alembic/: alembic.ini  env.py
src/crawlerstack_spiderkeeper/api/: __init__.py  middlewares.py  route_class.py
src/crawlerstack_spiderkeeper/config/: __init__.py  settings.yaml  settings.yml
src/crawlerstack_spiderkeeper/dao/: __init__.py  artifact.py  audit.py  base.py  job.py  project.py  server.py  storage.py  task.py
src/crawlerstack_spiderkeeper/db/: __init__.py  models.py
src/crawlerstack_spiderkeeper/executor/: __init__.py  base.py  docker.py  local.py  subprocess.py
src/crawlerstack_spiderkeeper/exportors/: __init__.py
src/crawlerstack_spiderkeeper/rest_api/: __init__.py  middlewares.py  route_class.py  utils.py
src/crawlerstack_spiderkeeper/schedule/: scheduler.py
src/crawlerstack_spiderkeeper/schemas/: __init__.py  artifact.py  audit.py  base.py  job.py  project.py  schedule.py  server.py  storage.py  task.py
src/crawlerstack_spiderkeeper/services/: __init__.py  artifact.py  audit.py  base.py  job.py  log.py  metric.py  mixinx.py  server.py  storage.py  task.py  utils.py
src/crawlerstack_spiderkeeper/utils/: __init__.py  constants.py  exceptions.py  log.py  metadata.py  mock.py  states.py  status.py  types.py  virtualenv.py
src/crawlerstack_spiderkeeper_executor/: __init__.py  cmdline.py  manage.py  signals.py
src/crawlerstack_spiderkeeper_executor/config/: __init__.py  settings.yml
src/crawlerstack_spiderkeeper_executor/executor/: __init__.py  base.py  docker.py  k8s.py
src/crawlerstack_spiderkeeper_executor/messages/: __init__.py  executor.py
src/crawlerstack_spiderkeeper_executor/rest_api/: __init__.py  middlewares.py
src/crawlerstack_spiderkeeper_executor/schemas/: base.py
src/crawlerstack_spiderkeeper_executor/services/: __init__.py  executor.py  register.py
src/crawlerstack_spiderkeeper_executor/utils/: __init__.py  exceptions.py  log.py  request.py  status.py
src/crawlerstack_spiderkeeper_forwarder/: __init__.py  cmdline.py  manage.py
src/crawlerstack_spiderkeeper_forwarder/config/: __init__.py  settings.yml
src/crawlerstack_spiderkeeper_forwarder/forwarder/: __init__.py  base.py  data.py  log.py  metric.py  utils.py
src/crawlerstack_spiderkeeper_forwarder/rest_api/: __init__.py  middlewares.py
src/crawlerstack_spiderkeeper_forwarder/schemas/: data.py  log.py  metric.py
src/crawlerstack_spiderkeeper_scheduler/: __init__.py  cmdline.py  manage.py  models.py  signals.py
src/crawlerstack_spiderkeeper_server/: __init__.py  cmdline.py  manage.py  models.py  signals.py
test_old/: __init__.py
tests/: __init__.py  conftest.py  test.py  test_db.py
tests/api/: test_artifact.py  test_audit.py  test_job.py  test_metric.py  test_project.py  test_server.py  test_storage.py  test_task.py
tests/crawlerstack_spiderkeeper_executor/: conftest.py
tests/crawlerstack_spiderkeeper_forwarder/: conftest.py
tests/crawlerstack_spiderkeeper_scheduler/: conftest.py  test_manage.py
tests/crawlerstack_spiderkeeper_server/: conftest.py
tests/dao/: conftest.py  test_artifact.py  test_base.py  test_job.py  test_project.py  test_server.py  test_storage.py  test_task.py
tests/data/demo/: Dockerfile  (+4 more)
tests/db/: test_db.py  test_migrate.py  tests.py
tests/executor/: test_docker.py  test_local.py  test_subprocess.py
tests/rest_api/: test_artifact.py  test_job.py  test_metric.py  test_project.py  test_server.py  test_storage.py  test_task.py
tests/services/: test_artifact.py  test_base.py  test_job.py  test_metric.py  test_mixins.py  test_storage.py
tests/utils/: test_log.py  test_metadata.py  tests.py  tests_utils.py
(+310 files in other folders)
