[tool.poetry]
name = "crawlerstack-spiderkeeper"
version = "3.0.0"
description = "spider keeper"
authors = ["whg517 <huagang517@126.com>"]
readme = "README.md"
packages = [
    { include = "crawlerstack_spiderkeeper_executor", from = "src" },
    { include = "crawlerstack_spiderkeeper_forwarder", from = "src" },
    { include = "crawlerstack_spiderkeeper_scheduler", from = "src" },
    { include = "crawlerstack_spiderkeeper_server", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
aio-pydispatch = "^1.0.0"
psutil = "^5.9.4"
dynaconf = "^3.1.11"
click = "^8.1.3"
aiodocker = "^0.21.0"
sqlalchemy = { extras = ["asyncio"], version = "^1.4.46" }
mysqlclient = "^2.1.1"
aiomysql = "^0.1.1"
aiosqlite = "^0.17.0"
alembic = "^1.8.1"
aiofiles = "^22.1.0"
pydantic = "^1.10.2"
starlette = "^0.21.0"
prometheus-client = "^0.15.0"
starlette-exporter = "^0.14.0"
kombu = "^5.2.4"
furl = "^2.1.3"
toml = "^0.10.2"
virtualenv = "^20.16.7"
uvicorn = "^0.20.0"
fastapi = "^0.87.0"
python-multipart = "^0.0.5"
fastapi-sa = "^0.0.1.dev1"
inflection = "^0.5.1"
pymysql = "^1.0.2"
apscheduler = "^3.9.1.post1"
cryptography = "^39.0.0"
greenlet = "^2.0.1"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
tox = "^3.27.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
isort = "^5.10.1"
pytest-asyncio = "^0.20.2"
pytest-mock = "^3.10.0"
requests = "^2.28.1"
asyncmock = "^0.4.2"
pylint = "^2.15.6"
pylint-pytest = "^1.1.2"
atomicwrites = "^1.4.1"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
crawlerstack_spiderkeeper_server = "crawlerstack_spiderkeeper_server.cmdline:main"
crawlerstack_spiderkeeper_scheduler = "crawlerstack_spiderkeeper_scheduler.cmdline:main"
crawlerstack_spiderkeeper_forwarder = "crawlerstack_spiderkeeper_forwarder.cmdline:main"
crawlerstack_spiderkeeper_executor = '"crawlerstack_spiderkeeper_executor.cmdline:main'"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
log_cli = true
#log_cli_level = "DEBUG"
#log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
#log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[tool.pylint.main]
disable = [
    "too-many-instance-attributes",
    "broad-except",
    "too-few-public-methods",
    "unused-argument",
    "no-name-in-module",
    "fixme",
    "duplicate-code",
    "arguments-differ"
]
good-names = [
    "i",
    "j",
    "k",
    "ex",
    "Run",
    "_",
    "pk",
    "id",
    "v",
    "ModelType",
    "CreateSchemaType",
    "UpdateSchemaType",
    "ModelSchemaType"
]
extension-pkg-allow-list = [
    "lxml",
]

[tool.pylint.MASTER]
load-plugins = ["pylint_pytest"]
ignore-paths = [
    "src/crawlerstack_spiderkeeper/.*",
    "src/crawlerstack_spiderkeeper_server/.local",
    "src/crawlerstack_spiderkeeper_server/alembic",
    "src/crawlerstack_spiderkeeper_scheduler/.local",
    "src/crawlerstack_spiderkeeper_scheduler/alembic",
    "src/crawlerstack_spiderkeeper_forwarder/.local",
    "src/crawlerstack_spiderkeeper_executor/.local",
]
ignore-modules = ["sqlalchemy", ]

[tool.pylint.design]
max-line-length = 120
max-args = 11
max-attributes = 10
min-public-methods = 1