[metadata]
name = crawlerstack_spiderkeeper
version = crawlerstack_spiderkeeper.__version__
author = huagang517
author_email = huagang517@126.com
url = https://github.com/crawlerstack/crawlerstack-spiderkeeper
description = spider keeper
keywords = spider keeper
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
python_requires > = 3.7
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    aio_pydispatch
    psutil
    dynaconf
    click
    aiodocker
    sqlalchemy
    mysqlclient
    alembic
    uvicorn
    fastapi
    aiofiles
    python-multipart
    prometheus-client
    starlette-exporter
    kombu
    furl
    toml
    pydantic

[options.packages.find]
where = src
exclude =
    tests*
    docs

# https://setuptools.readthedocs.io/en/latest/userguide/entry_point.html
[options.entry_points]
console_scripts =
    spiderkeeper = crawlerstack_spiderkeeper.cmdline:main

# Packaging project data in module crawlerstack_spiderkeeper.
# https://setuptools.readthedocs.io/en/latest/userguide/datafiles.html?highlight=package_data
[options.package_data]
crawlerstack_spiderkeeper.config =
    settings.yml


# Copy data for user from project when pip install.
# The relative path is prefix `sys.prefix` . eg: `/usr/local/`.
# Path and data will remove When pip uninstall.
# https://docs.python.org/3/distutils/setupscript.html#installing-additional-files
[options.data_files]
etc/crawlerstack/spiderkeeper =
    src/config/settings.yml

[tool:pytest]
testpaths = tests
python_files = tests.py test_*.py *_tests.py
markers =
    integration: Integration test

# http://pylint.pycqa.org/en/latest/user_guide/run.html?highlight=rcfile#command-line-options
[pylint.master]
jobs = 5
load-plugins = pylint_pytest,

[pylint.basic]
# Good variable names which should always be accepted, separated by a comma.
good-names = i,
             j,
             k,
             ex,
             Run,
             _,
             pk,
             id,

[pylint.design]
max-args = 10
max-attributes = 10
min-public-methods = 0
